unpackaged/main/default/objects/Case/fields/Account_Support_Hold__c.field-meta.xml
<CustomField>
    <fullName>Account_Support_Hold__c</fullName>
    <formula>IF (Account.Support_Service_Credit_Hold__c = True, "True", "False")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Support Hold</label>
    <type>Text</type>
</CustomField>