unpackaged/main/default/objects/Case/fields/Account_Support_Tier__c.field-meta.xml
<CustomField>
    <fullName>Account_Support_Tier__c</fullName>
    <formula>Account.Support_Tier_Text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Support Tier</label>
    <type>Text</type>
</CustomField>