unpackaged/main/default/objects/Case/fields/AssignedToRep__c.field-meta.xml
<CustomField>
    <fullName>AssignedToRep__c</fullName>
    <formula>IF( AND(OwnerId  &lt;&gt; '00G40000001lCTs',OwnerId  &lt;&gt; '00G40000001lCTx', OwnerId  &lt;&gt; '00G40000001lCU2',OwnerId  &lt;&gt; '00G40000001lCUW'),
1, 
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned To Rep?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>