unpackaged/main/default/objects/Case/fields/Bill_Address__c.field-meta.xml
<CustomField>
    <fullName>Bill_Address__c</fullName>
    <formula>Account.BillingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill Address</label>
    <type>Text</type>
</CustomField>