unpackaged/main/default/objects/Case/fields/Bill_City__c.field-meta.xml
<CustomField>
    <fullName>Bill_City__c</fullName>
    <formula>Account.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill City</label>
    <type>Text</type>
</CustomField>