unpackaged/main/default/objects/Case/fields/Bill_Date__c.field-meta.xml
<CustomField>
    <fullName>Bill_Date__c</fullName>
    <label>Bill Date</label>
    <type>Date</type>
</CustomField>