unpackaged/main/default/objects/Case/fields/Bill_State__c.field-meta.xml
<CustomField>
    <fullName>Bill_State__c</fullName>
    <formula>Account.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill State</label>
    <type>Text</type>
</CustomField>