unpackaged/main/default/objects/Case/fields/Bill_Zip__c.field-meta.xml
<CustomField>
    <fullName>Bill_Zip__c</fullName>
    <formula>Account.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill Zip</label>
    <type>Text</type>
</CustomField>