unpackaged/main/default/objects/Case/fields/Billed_Labor_Hours_HH_MM__c.field-meta.xml
<CustomField>
    <fullName>Billed_Labor_Hours_HH_MM__c</fullName>
    <inlineHelpText>Billable Labor Hours in hours/minutes (00:45) = 45 minutes</inlineHelpText>
    <label>Billed Labor Hours (HH:MM)</label>
    <length>8</length>
    <type>Text</type>
</CustomField>