unpackaged/main/default/objects/Case/fields/Case_Credit_Hold_Alert__c.field-meta.xml
<CustomField>
    <fullName>Case_Credit_Hold_Alert__c</fullName>
    <formula>IF( Account_Support_Hold__c = "True", IMAGE("/servlet/servlet.FileDownload?file=01540000002jafW", "Red"),"")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Hold Banner</label>
    <type>Text</type>
</CustomField>