unpackaged/main/default/objects/Case/fields/Case_Effort__c.field-meta.xml
<CustomField>
    <fullName>Case_Effort__c</fullName>
    <label>Case_Effort</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>