unpackaged/main/default/objects/Case/fields/Case_Flag_Age_Text_Custom__c.field-meta.xml
<CustomField>
    <fullName>Case_Flag_Age_Text_Custom__c</fullName>
    <description>The Case Flag Age decimal rendered as a eight-digit string used to aid with sorting on list views. FOR CUSTOM CASE FLAGS SETUP.</description>
    <formula>IF(ISNULL( FLAGS__ViewedFlag__c ),'',LPAD(TEXT(ROUND( Case_Flag_Rolling_Business_Age__c *100,0)),6,'0'))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flag Sort</label>
    <type>Text</type>
</CustomField>