unpackaged/main/default/objects/Case/fields/Case_Flag_Rolling_Business_Age__c.field-meta.xml
<CustomField>
    <fullName>Case_Flag_Rolling_Business_Age__c</fullName>
    <formula>FLAGS__Case_Flag_Business_Age__c  +    Time_with_IPRO_Media__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Time flag has been set on case all-time</inlineHelpText>
    <label>Case Flag Rolling Business Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>