unpackaged/main/default/objects/Case/fields/Case_Flags_SLA__c.field-meta.xml
<CustomField>
    <fullName>Case_Flags_SLA__c</fullName>
    <formula>IF(AND( ISPICKVAL(Priority,"Priority 1"), ISPICKVAL(Case_Type__c,"Service - Change")),8,
IF(AND( ISPICKVAL(Priority,"Priority 2"), ISPICKVAL(Case_Type__c,"Service - Change")),24,
IF(AND( ISPICKVAL(Priority,"Priority 3"), ISPICKVAL(Case_Type__c,"Service - Change")),40,
IF(AND( ISPICKVAL(Priority,"Priority 4"), ISPICKVAL(Case_Type__c,"Service - Change")),80,
IF(AND( ISPICKVAL(Priority,"Priority 1"), ISPICKVAL(Case_Type__c,"Service - Break Fix")),4,
IF(AND( ISPICKVAL(Priority,"Priority 2"), ISPICKVAL(Case_Type__c,"Service - Break Fix")),8,
IF(AND( ISPICKVAL(Priority,"Priority 3"), ISPICKVAL(Case_Type__c,"Service - Break Fix")),16,
IF(AND( ISPICKVAL(Priority,"Priority 4"), ISPICKVAL(Case_Type__c,"Service - Break Fix")),40,
80))))))))</formula>
    <inlineHelpText>Time in Business Hours that this Case will have breached SLA.</inlineHelpText>
    <label>Case Flags SLA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>