unpackaged/main/default/objects/Case/fields/Cat_5_Billed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cat_5_Billed_Amount__c</fullName>
    <label>Cat-5 Billed Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>