unpackaged/main/default/objects/Case/fields/csplit__Custom_Field__c.field-meta.xml
<CustomField>
    <fullName>csplit__Custom_Field__c</fullName>
    <label>Custom Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>