unpackaged/main/default/objects/Case/fields/Customer_Branch_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Branch_Number__c</fullName>
    <formula>Account.Customer_Branch_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Branch Number</label>
    <type>Text</type>
</CustomField>