unpackaged/main/default/objects/Case/fields/Days_Since_Last_Update__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Update__c</fullName>
    <formula>TODAY()  -  DATEVALUE(LastModifiedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Last Update</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>