unpackaged/main/default/objects/Case/fields/E2CP__AdditionalAvailablePrivate__c.field-meta.xml
<CustomField>
    <fullName>E2CP__AdditionalAvailablePrivate__c</fullName>
    <description>Stores additional private email addresses on the New Comment page Available Case Recipients section.</description>
    <label>Additional Available (Private)</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>