unpackaged/main/default/objects/Case/fields/E2CP__AdditionalBCCPrivate__c.field-meta.xml
<CustomField>
    <fullName>E2CP__AdditionalBCCPrivate__c</fullName>
    <description>Stores private email addresses entered on the New Comment page Additional BCC section.</description>
    <label>Additional BCC (Private)</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>