unpackaged/main/default/objects/Case/fields/E2CP__AdditionalCC__c.field-meta.xml
<CustomField>
    <fullName>E2CP__AdditionalCC__c</fullName>
    <description>Stores email addresses entered on the New Comment page Additional CC section.</description>
    <label>Additional CC</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>