unpackaged/main/default/objects/Case/fields/E2CP__AdditionalCCPrivate__c.field-meta.xml
<CustomField>
    <fullName>E2CP__AdditionalCCPrivate__c</fullName>
    <description>Stores private email addresses entered on the New Comment page Additional CC section.</description>
    <label>Additional CC (Private)</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>