unpackaged/main/default/objects/Case/fields/E2CP__Case_Thread_Id__c.field-meta.xml
<CustomField>
    <fullName>E2CP__Case_Thread_Id__c</fullName>
    <description>A formula to generate the Salesforce Case Thread Id for display on detail pages or inclusion in email templates.</description>
    <formula>"[ ref:_" &amp; 
LEFT( $Organization.Id , 5) &amp; 
IF (MID ( $Organization.Id, 6, 1) &lt;&gt; "0", RIGHT($Organization.Id,10), 
IF (MID ( $Organization.Id, 7, 1) &lt;&gt; "0",RIGHT($Organization.Id, 9), 
IF (MID ( $Organization.Id, 8, 1) &lt;&gt;"0", RIGHT($Organization.Id, 8), 
IF (MID ( $Organization.Id, 9, 1)&lt;&gt; "0", RIGHT($Organization.Id, 7), 
IF (MID ( $Organization.Id,10, 1) &lt;&gt; "0", RIGHT($Organization.Id, 6), 
IF (MID ($Organization.Id, 11, 1) &lt;&gt; "0", RIGHT($Organization.Id, 5), 
IF(MID ( $Organization.Id, 12, 1) &lt;&gt; "0", RIGHT($Organization.Id,4), 
IF (MID ( $Organization.Id, 13, 1) &lt;&gt; "0",RIGHT($Organization.Id, 3), 
IF (MID ( $Organization.Id, 14, 1) &lt;&gt;"0", RIGHT($Organization.Id, 2), "") ) ) ) ) ) ) ) )
&amp; "._" &amp;LEFT( Id, 5) &amp; 
IF(MID ( Id, 6, 1) &lt;&gt; "0", RIGHT(Id, 10), 
IF (MID ( Id, 7, 1)&lt;&gt; "0", RIGHT(Id, 9), 
IF (MID ( Id, 8, 1) &lt;&gt; "0", RIGHT(Id,8), 
IF (MID ( Id, 9, 1) &lt;&gt; "0", RIGHT(Id, 7), 
IF (MID ( Id, 10,1) &lt;&gt; "0", RIGHT(Id, 6), 
IF (MID ( Id, 11, 1) &lt;&gt; "0",RIGHT(Id, 5), 
IF (MID ( Id, 12, 1) &lt;&gt; "0", RIGHT(Id, 4), 
IF (MID( Id, 13, 1) &lt;&gt; "0", RIGHT(Id, 3), 
IF (MID ( Id, 14, 1) &lt;&gt;"0", RIGHT(Id, 2), "") ) ) ) ) ) ) ) ) &amp; ":ref ]"</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Thread Id</label>
    <type>Text</type>
</CustomField>