unpackaged/main/default/objects/Case/fields/E2CP__Knowledge_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>E2CP__Knowledge_Base_URL__c</fullName>
    <label>Knowledge Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>