unpackaged/main/default/objects/Case/fields/E2CP__SubStatus__c.field-meta.xml
<CustomField>
    <fullName>E2CP__SubStatus__c</fullName>
    <description>This field is deprecated. Do not use it.</description>
    <label>SubStatus (Deprecated)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Unfinished</fullName>
            </value>
            <value>
                <fullName>Important</fullName>
            </value>
            <value>
                <fullName>ASAP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>