unpackaged/main/default/objects/Case/fields/FLAGS__Aging_Speed__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Aging_Speed__c</fullName>
    <description>The Aging Speed at the time the History Tracking Record was created.</description>
    <inlineHelpText>The Aging Speed at the time the History Tracking Record was created.</inlineHelpText>
    <label>Aging Speed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>