unpackaged/main/default/objects/Case/fields/FLAGS__Case_Flag_Account__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Case_Flag_Account__c</fullName>
    <description>Deprecated. Use Flag or Flag (BH) instead.</description>
    <formula>IF((NOW() - FLAGS__ViewedFlag__c)*24 &gt; Account.FLAGS__AcctTimeOffset4__c, 
IMAGE( "/servlet/servlet.FileDownload?flagsort=" &amp; FLAGS__Case_Flag_Age_Text__c &amp; "&amp;file=" &amp; $Setup.FLAGS__FlagPref__c.FLAGS__Offset4Image__c, "L4", 16, 16), 
IF((NOW() - FLAGS__ViewedFlag__c)*24 &gt; Account.FLAGS__AcctTimeOffset3__c, 
IMAGE( "/servlet/servlet.FileDownload?flagsort=" &amp; FLAGS__Case_Flag_Age_Text__c &amp; "&amp;file=" &amp; $Setup.FLAGS__FlagPref__c.FLAGS__Offset3Image__c, "L3", 16, 16), 
IF((NOW() - FLAGS__ViewedFlag__c)*24 &gt; Account.FLAGS__AcctTimeOffset2__c, 
IMAGE( "/servlet/servlet.FileDownload?flagsort=" &amp; FLAGS__Case_Flag_Age_Text__c &amp; "&amp;file=" &amp; $Setup.FLAGS__FlagPref__c.FLAGS__Offset2Image__c, "L2", 16, 16), 
IF((NOW() - FLAGS__ViewedFlag__c)*24 &gt; Account.FLAGS__AcctTimeOffset1__c, 
IMAGE( "/servlet/servlet.FileDownload?flagsort=" &amp; FLAGS__Case_Flag_Age_Text__c &amp; "&amp;file=" &amp; $Setup.FLAGS__FlagPref__c.FLAGS__Offset1Image__c, "L1",16,16), 
IMAGE( "/servlet/servlet.FileDownload?flagsort=" &amp; FLAGS__Case_Flag_Age_Text__c &amp; "&amp;file=" &amp; $Setup.FLAGS__FlagPref__c.FLAGS__BlankOffsetImage__c, "L0",16,16)) 
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zDep Case Flag (Account)</label>
    <type>Text</type>
</CustomField>