unpackaged/main/default/objects/Case/fields/FLAGS__Case_Flag_Business_Account__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Case_Flag_Business_Account__c</fullName>
    <description>Deprecated. Use Flag or Flag (BH) instead.</description>
    <formula>IF(ISNULL(FLAGS__ViewedFlag__c),null,

IMAGE( "/servlet/servlet.FileDownload?fs=" &amp; FLAGS__Case_Flag_Age_Text__c &amp; "&amp;file=" &amp;

IF(FLAGS__Case_Flag_Business_Age__c &gt; Account.FLAGS__AcctTimeOffset4__c , 
 $Setup.FLAGS__FlagPref__c.FLAGS__Offset4Image__c,

IF(FLAGS__Case_Flag_Business_Age__c &gt;= Account.FLAGS__AcctTimeOffset3__c , 
 $Setup.FLAGS__FlagPref__c.FLAGS__Offset3Image__c,

IF(FLAGS__Case_Flag_Business_Age__c &gt;= Account.FLAGS__AcctTimeOffset2__c, 
$Setup.FLAGS__FlagPref__c.FLAGS__Offset2Image__c,

IF(FLAGS__Case_Flag_Business_Age__c &gt;= Account.FLAGS__AcctTimeOffset1__c,
$Setup.FLAGS__FlagPref__c.FLAGS__Offset1Image__c,

$Setup.FLAGS__FlagPref__c.FLAGS__BlankOffsetImage__c))))

,"", 16, 16))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zDep Case Flag Business (Account)</label>
    <type>Text</type>
</CustomField>