unpackaged/main/default/objects/Case/fields/FLAGS__Case_Flag_Business_Age__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Case_Flag_Business_Age__c</fullName>
    <description>The total amount of time (in business hours) since the Case Flag was set.</description>
    <formula>FLAGS__PreviousBusinessHours__c + FLAGS__CurrentBusinessHours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Flag Business Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>