unpackaged/main/default/objects/Case/fields/FLAGS__Case_Flag_Business_Time_Days__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Case_Flag_Business_Time_Days__c</fullName>
    <description>Renders the day portion of the Case Flag in business hours as "X Days".</description>
    <formula>IF(FLAGS__Case_Flag_Business_Age__c &lt; 24, null,
TEXT(ROUND(FLAGS__Case_Flag_Business_Age__c /24-0.49999,0)) + ' Days')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Flag Business Time Days</label>
    <type>Text</type>
</CustomField>