unpackaged/main/default/objects/Case/fields/FLAGS__Case_Flag_Business_Time_Hours__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Case_Flag_Business_Time_Hours__c</fullName>
    <description>Renders the hour portion of the Case Flag in business hours as "Y Hours".</description>
    <formula>TEXT(ROUND(MOD(FLAGS__Case_Flag_Business_Age__c,24)-0.49999,0)) + ' Hours'</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Flag Business Time Hours</label>
    <type>Text</type>
</CustomField>