unpackaged/main/default/objects/Case/fields/FLAGS__Case_Flag_Business_Time_Mins__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Case_Flag_Business_Time_Mins__c</fullName>
    <description>Renders the minute portion of the Case Flag in business hours as "Z Minutes".</description>
    <formula>TEXT(ROUND(MOD(FLAGS__Case_Flag_Business_Age__c,1) * 60,0)) + ' Minutes'</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Flag Business Time Mins</label>
    <type>Text</type>
</CustomField>