unpackaged/main/default/objects/Case/fields/FLAGS__Case_Flag_Time__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Case_Flag_Time__c</fullName>
    <description>Renders the Case Flag Age as "xx Days xx Hours xx Minutes".</description>
    <formula>IF(ISNULL(FLAGS__Case_Flag_Time_Days__c), null, FLAGS__Case_Flag_Time_Days__c + ' ') +
IF(ISNULL(FLAGS__Case_Flag_Time_Hours__c), null, FLAGS__Case_Flag_Time_Hours__c + ' ') +
IF(ISNULL(FLAGS__Case_Flag_Time_Mins__c), null, FLAGS__Case_Flag_Time_Mins__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Flag Time</label>
    <type>Text</type>
</CustomField>