unpackaged/main/default/objects/Case/fields/FLAGS__Case_Flag_Time_Days__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Case_Flag_Time_Days__c</fullName>
    <description>Renders the day portion of the Case Flag as "X Days".</description>
    <formula>IF(ISNULL(FLAGS__ViewedFlag__c) || FLAGS__Case_Flag_Age__c &lt; 24, null, TEXT(FLOOR(FLAGS__Case_Flag_Age__c /24)) + ' Days')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Flag Time Days</label>
    <type>Text</type>
</CustomField>