unpackaged/main/default/objects/Case/fields/FLAGS__Case_Flag_Time_Mins__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Case_Flag_Time_Mins__c</fullName>
    <description>Renders the minute portion of the Case Flag as "Z Minutes".</description>
    <formula>IF(ISNULL(FLAGS__ViewedFlag__c), null, TEXT(ROUND(MOD(FLAGS__Case_Flag_Age__c,1) * 60,0)) + ' Minutes')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Flag Time Mins</label>
    <type>Text</type>
</CustomField>