unpackaged/main/default/objects/Case/fields/FLAGS__CaseFlag__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__CaseFlag__c</fullName>
    <description>This should be used  to display the Case Flag if your organization is not using business hours.</description>
    <formula>IF(ISNULL(FLAGS__ViewedFlag__c),null, 
IF(FLAGS__Case_Flag_Age__c &gt; (IF(ISBLANK(FLAGS__CaseTimeOffset4__c) , $Setup.FLAGS__FlagPref__c.FLAGS__TimeOffset4__c,FLAGS__CaseTimeOffset4__c)), 
IMAGE( "/servlet/servlet.FileDownload?flagsort=" &amp; FLAGS__Case_Flag_Age_Text__c &amp; "&amp;file=" &amp; $Setup.FLAGS__FlagPref__c.FLAGS__Offset4Image__c, "L4", 16, 16), 
IF(FLAGS__Case_Flag_Age__c &gt;= (IF(ISBLANK(FLAGS__CaseTimeOffset3__c ), $Setup.FLAGS__FlagPref__c.FLAGS__TimeOffset3__c,FLAGS__CaseTimeOffset3__c)), 
IMAGE( "/servlet/servlet.FileDownload?flagsort=" &amp; FLAGS__Case_Flag_Age_Text__c &amp; "&amp;file=" &amp; $Setup.FLAGS__FlagPref__c.FLAGS__Offset3Image__c, "L3", 16, 16), 
IF(FLAGS__Case_Flag_Age__c &gt;= (IF(ISBLANK(FLAGS__CaseTimeOffset2__c ), $Setup.FLAGS__FlagPref__c.FLAGS__TimeOffset2__c,FLAGS__CaseTimeOffset2__c)), 
IMAGE( "/servlet/servlet.FileDownload?flagsort=" &amp; FLAGS__Case_Flag_Age_Text__c &amp; "&amp;file=" &amp; $Setup.FLAGS__FlagPref__c.FLAGS__Offset2Image__c, "L2", 16, 16), 
IF(FLAGS__Case_Flag_Age__c &gt;= (IF(ISBLANK(FLAGS__CaseTimeOffset1__c ), $Setup.FLAGS__FlagPref__c.FLAGS__TimeOffset1__c,FLAGS__CaseTimeOffset1__c)), 
IMAGE( "/servlet/servlet.FileDownload?flagsort=" &amp; FLAGS__Case_Flag_Age_Text__c &amp; "&amp;file=" &amp; $Setup.FLAGS__FlagPref__c.FLAGS__Offset1Image__c, "L1",16,16), 
IMAGE( "/servlet/servlet.FileDownload?flagsort=" &amp; FLAGS__Case_Flag_Age_Text__c &amp; "&amp;file=" &amp; $Setup.FLAGS__FlagPref__c.FLAGS__BlankOffsetImage__c, "L0",16,16)) 
))) 
)</formula>
    <label>Flag</label>
    <type>Text</type>
</CustomField>