unpackaged/main/default/objects/Case/fields/FLAGS__CaseFlagsBusinessHours__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__CaseFlagsBusinessHours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A reference to the Case Flags Business Hours record used to calculate the Case Flag Business Age. This is set automatically and should not be manipulated.</description>
    <label>Case Flags Business Hours</label>
    <referenceTo>FLAGS__CaseFlagsBusinessHours__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>