unpackaged/main/default/objects/Case/fields/FLAGS__CaseFlagsEscalationTime4__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__CaseFlagsEscalationTime4__c</fullName>
    <description>A timestamp to indicate when the total business hours on the case will exceed Age 4 Hours. This can be used as the basis for workflow email alerts or other automation.</description>
    <label>Case Flags Escalation Time 4</label>
    <type>DateTime</type>
</CustomField>